# world_cup

./: .gitignore  README.md  pyproject.toml  scrape_logos.py
.github/workflows/: daily-update.yml
data/: SOURCES.md  logos.json
data/processed/: matches.parquet
data/raw/: wc2026_fixtures.csv  wc2026_results.csv
notebooks/: exp.ipynb
outputs/models/: dixon_coles.pkl  train_meta.txt
outputs/predictions/: 2026-06-12_predictions.json  2026-06-13_predictions.json  2026-06-14_predictions.json  2026-06-15_predictions.json  2026-06-16_predictions.json  2026-06-17_predictions.json  2026-06-18_predictions.json  2026-06-19_predictions.json  2026-06-20_predictions.json  2026-06-21_predictions.json  2026-06-22_predictions.json  2026-06-23_predictions.json  2026-06-24_predictions.json  2026-06-25_predictions.json  2026-06-26_predictions.json  2026-06-27_predictions.json  2026-06-28_predictions.json
public/: data.js  index.html
public_src/: index.html
scripts/: build_site.py
src/: __init__.py
src/data/: loader.py  wc2026.py
src/features/: elo.py
src/models/: dixon_coles.py
src/pipeline/: live.py  predict.py  train.py
tests/: backtest.py
